<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.rarepebble.colorpicker.ColorPreference
        android:key="simplePreference"
        android:title="@string/pref_title"
        app:colorpicker_defaultColor="#f00"
        />

    <com.rarepebble.colorpicker.ColorPreference
        android:key="optionalColor"
        android:title="@string/pref_optional_color"
        app:colorpicker_noneSelectedSummaryText="@string/no_color_selected"
        app:colorpicker_selectNoneButtonText="@string/no_color"
        />

    <com.rarepebble.colorpicker.ColorPreference
        android:key="opaquePreference"
        android:title="@string/pref_title_minimal"
        app:colorpicker_showAlpha="false"
        app:colorpicker_showHex="false"
        app:colorpicker_defaultColor="#0f0"
        />

</PreferenceScreen>